@@ -1,3 +1,7 @@
+2013-05-18  Xavier Perseguers  <xavier@causal.ch>
+
+	* [FEATURE] #48340: Add detection of global sphinx
+
 2013-05-17  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Show a FlashMessage when conf.py is temporarily modified for JSON output
